PWA visibility fix

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Project Aegis</title>
     <link rel="stylesheet" href="style.css">
     <meta name="theme-color" content="#2c3e50">
-    <link rel="manifest"
-        href="data:application/json;base64,eyJuYW1lIjoiUHJvamVjdCBBZWdpcyIsImRpc3BsYXkiOiJzdGFuZGFsb25lIn0=">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
         </div>
         <h1>Project Aegis</h1>
         <div class="header-right">
-            <button id="install-btn" class="btn-icon" style="display: none;" aria-label="Install App">
+            <button id="install-btn" class="btn-icon" style="display: block;" aria-label="Install App">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
