--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
                     <label for="reg-email">Email</label>
                     <input type="email" id="reg-email" class="input-field" placeholder="Enter your email" required>
                 </div>
+                <div class="form-group">
+                    <label for="reg-password">8-Digit PIN</label>
+                    <input type="password" id="reg-password" class="input-field" placeholder="Enter 8-digit PIN"
+                        pattern="[0-9]*" inputmode="numeric" maxlength="8" required>
+                </div>
+                <div class="form-group">
+                    <label for="reg-password-confirm">Confirm PIN</label>
+                    <input type="password" id="reg-password-confirm" class="input-field"
+                        placeholder="Confirm 8-digit PIN" pattern="[0-9]*" inputmode="numeric" maxlength="8" required>
+                </div>
                 <button type="submit" class="btn-primary">Register</button>
             </form>
         </div>
