--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         style="position:fixed; bottom:20px; left:50%; transform:translateX(-50%); background:#333; color:white; padding:10px 20px; border-radius:20px; opacity:0; transition:opacity 0.3s; pointer-events:none;">
     </div>
 
+    <script src="db.js"></script>
     <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
