--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <circle cx="12" cy="7" r="4"></circle>
                 </svg>
             </div>
-            <h2>Incident Reporting System</h2>
+            <h2>Incident Reporting System v1.1</h2>
             <p>Register to report incidents</p>
 
             <form id="register-form">
@@ -31,7 +31,7 @@
                     <label for="reg-username">Username</label>
                     <input type="text" id="reg-username" class="input-field" placeholder="Enter your username" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="group-email">
                     <label for="reg-email">Email</label>
                     <input type="email" id="reg-email" class="input-field" placeholder="Enter your email" required>
                 </div>
@@ -40,12 +40,18 @@
                     <input type="password" id="reg-password" class="input-field" placeholder="Enter 8-digit PIN"
                         pattern="[0-9]*" inputmode="numeric" maxlength="8" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="group-confirm">
                     <label for="reg-password-confirm">Confirm PIN</label>
                     <input type="password" id="reg-password-confirm" class="input-field"
                         placeholder="Confirm 8-digit PIN" pattern="[0-9]*" inputmode="numeric" maxlength="8" required>
                 </div>
-                <button type="submit" class="btn-primary">Register</button>
+                <button type="submit" class="btn-primary" id="auth-submit-btn">Register</button>
+
+                <p style="margin-top: 1.5rem; color: var(--text-muted); font-size: 0.9rem; text-align: center;">
+                    <span id="auth-toggle-text">Already have an account?</span>
+                    <a href="#" onclick="app.toggleAuthMode()"
+                        style="color: var(--primary-color); font-weight: 600; text-decoration: none;">Login</a>
+                </p>
             </form>
         </div>
     </section>
@@ -138,13 +144,21 @@
                     <div class="form-group">
                         <label>Severity Level: <span id="severity-val">3</span></label>
                         <div class="slider-container">
-                            <input type="range" id="severity" min="1" max="5" value="3"
-                                oninput="document.getElementById('severity-val').textContent = this.value">
+                            <input type="range" id="severity" min="1" max="5" value="3" list="severity-ticks">
+                            <datalist id="severity-ticks">
+                                <option value="1"></option>
+                                <option value="2"></option>
+                                <option value="3"></option>
+                                <option value="4"></option>
+                                <option value="5"></option>
+                            </datalist>
                         </div>
-                        <div class="slider-labels">
-                            <span>1 - Low</span>
-                            <span>3 - Medium</span>
-                            <span>5 - Critical</span>
+                        <div class="slider-labels" style="margin-top: 0.5rem;">
+                            <span>1</span>
+                            <span>2</span>
+                            <span>3</span>
+                            <span>4</span>
+                            <span>5</span>
                         </div>
                     </div>
 
