--- a/index.html
+++ b/index.html
@@ -208,11 +208,8 @@
         style="position:fixed; bottom:20px; left:50%; transform:translateX(-50%); background:#333; color:white; padding:10px 20px; border-radius:20px; opacity:0; transition:opacity 0.3s; pointer-events:none;">
     </div>
 
-    <!-- Firebase App (core) SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-
-    <!-- Firestore SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script defer src="firebase.js"></script>
     <script defer src="db.js"></script>
     <script defer src="app.js"></script>
