Image upload fix

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
 
     <!-- Firestore SDK - Compat version -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+    <!-- Firebase Storage SDK - Compat version -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+
     <script defer src="firebase.js"></script>
     <script defer src="db.js"></script>
     <script defer src="app.js"></script>
